deploy/brands/imagic-oss-prod/shop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: imagic-shop
  labels:
    app: imagic-shop
spec:
  type: ClusterIP
  selector:
    app: imagic-shop
  ports:
    - name: http
      port: 80
      targetPort: 3001
      protocol: TCP
