deploy/brands/imagic-oss-prod/shop-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imagic-art
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: imagic.art
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: imagic-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: imagic-shop
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imagic-art-www
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: www.imagic.art
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: imagic-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: imagic-shop
                port:
                  number: 80
